# fairy-note

./: .env.sample  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  aerich.ini  create_superuser.py  main.py  pyproject.toml
fairy_note/: asgi.py  auth.py  exceptions.py  factory.py  models.py  routers.py  schemas.py  settings.py
migrations/fairy_note/: 0_20210517231404_init.sql
migrations/models/: 0_20201231052326_init.sql
